@@ -49,6 +49,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #11256: Fix inspect.getcallargs on functions that take only keyword
+  arguments.
+
 - Issue #11696: Fix ID generation in msilib.
 
 - Issue #9696: Fix exception incorrectly raised by xdrlib.Packer.pack_int when
